# cpp_prj_template

./: .envrc.pub  .gitignore
.bxorp/: .bxorp.conf.lua  .bxorp_signatures.json
code/: .clang-format  CMakeLists.txt
code/scripts/: b  build.sh  c  ca  cb  common.sh  r  run.sh
code/src/: main.cpp
